Update configreader to read environment variable for file location

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -3,6 +3,18 @@ LogPath = workspace
 LoggerLevel = 10
 LoggerName = nasgym.logger
 
+[bash]
+Algorithm = meta_a2c
+Environment = NAS_cifar10-v1
+Network = meta_lstm
+FinalModelName = meta_a2c_final.model
+NTasks = 1
+NSteps = 5
+NumTimesteps = 1e3
+NTrials = 10
+GPUMonitorSec = 10
+SleepTimeSec = 10
+
 [nasenv.default]
 ConfigFile = resources/nasenv.yml
 MaxSteps = 100
@@ -12,9 +24,9 @@ DbFile = workspace/db_experiments.csv
 BatchSize = 256
 NEpochs = 12
 OptimizerLearningRate = 0.001
-OptimizerBeta1=0.9
-OptimizerBeta2=0.999
-OptimizerEpsilon=10e-08
+OptimizerBeta1 = 0.9
+OptimizerBeta2 = 0.999
+OptimizerEpsilon = 10e-08
 FCLUnits = 1024
 DropoutLayerRate = 0.4
 
