Including metadataset handler

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -38,3 +38,9 @@ AllowMemoryGrowth = yes
 [trainer.earlystop]
 MuWeight = 0.5
 RhoWeight = 0.5
+
+[metadataset]
+TFRecordsRootDir = /home/TUE/20175601/workspace/metadataset_storage/records
+DatasetID = aircraft
+TrainTestSplitProp = 0.33
+RandomSeed = 32
