Refactor code to support handlers and parsers from config.ini

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -19,6 +19,8 @@ SleepTimeSec = 10
 ConfigFile = resources/nasenv.yml
 MaxSteps = 100
 DbFile = workspace/db_experiments.csv
+DatasetHandler = default
+ActionSpaceType = default
 
 [trainer.default]
 BatchSize = 256
