Make trainer a property too

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -21,6 +21,7 @@ MaxSteps = 100
 DbFile = workspace/db_experiments.csv
 DatasetHandler = default
 ActionSpaceType = default
+TrainerType = early-stop
 
 [trainer.default]
 BatchSize = 256
