Test to train the evolution of the architecture

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-LogPath = workspace
+LogPath = /home/TUE/20175601/workspace/git_storage/openai-baselines/workspace_mdn10
 LoggerLevel = 10
 LoggerName = nasgym.logger
 
@@ -9,22 +9,29 @@ Environment = NAS_cifar10-v1
 Network = meta_lstm
 FinalModelName = meta_a2c_final.model
 NTasks = 1
-NSteps = 5
-NumTimesteps = 1e3
-NTrials = 10
+NSteps = 20
+NumTimesteps = 300
+ExpTimesteps = 300
+NTrials = 1
 GPUMonitorSec = 10
-SleepTimeSec = 10
+SleepTimeSec = 30
+LogInterval = 25
+Gamma = 0.9
+Lr = 0.001
+LrScheduler = linear
+LrSchedulerOffset = 0
 
 [nasenv.default]
-ConfigFile = resources/nasenv.yml
+ConfigFile = /home/TUE/20175601/workspace/git_storage/nas-dmrl/configs/metadataset_n10/nasenv.yml
 MaxSteps = 100
-DbFile = workspace/db_experiments.csv
-DatasetHandler = default
-ActionSpaceType = default
-TrainerType = early-stop
+DbFile = /home/TUE/20175601/workspace/git_storage/openai-baselines/workspace_mdn10/db_experiments.csv
+DatasetHandler = meta-dataset
+ActionSpaceType = chained
+TrainerType = default
+PointersRewardDiscount=0.5
 
 [trainer.default]
-BatchSize = 256
+BatchSize = 128
 NEpochs = 12
 OptimizerLearningRate = 0.001
 OptimizerBeta1 = 0.9
@@ -44,6 +51,6 @@ RhoWeight = 0.5
 
 [metadataset]
 TFRecordsRootDir = /home/TUE/20175601/workspace/metadataset_storage/records
-DatasetID = aircraft
+DatasetID = vgg_flower
 TrainTestSplitProp = 0.33
 RandomSeed = 32
